--- a/GDSwift.xcodeproj/xcshareddata/xcschemes/GDSwift_Example.xcscheme
+++ b/GDSwift.xcodeproj/xcshareddata/xcschemes/GDSwift_Example.xcscheme
@@ -32,7 +32,7 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "607FACE41AFB9204008FA782"
+               BlueprintIdentifier = "18FDCA942602521800840378"
                BuildableName = "GDSwift_Tests.xctest"
                BlueprintName = "GDSwift_Tests"
                ReferencedContainer = "container:GDSwift.xcodeproj">
@@ -44,6 +44,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = "zh-Hant"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
